// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GenericHero
    block={
        Object {
            "fields": Object {
              "ImageRight": false,
              "buttonLabel": "foo",
              "buttonLink": "/foo",
              "color": "foo",
              "drip": false,
              "image1": Object {
                "image2": Object {
                  "sys": Object {
                    "createdAt": "foo",
                    "environment": Object {
                      "foo": Object {},
                    },
                    "id": "foo",
                    "locale": "foo",
                    "revision": 0,
                    "space": Object {
                      "sys": Object {
                        "id": "foo",
                        "linkType": "foo",
                        "type": "foo",
                      },
                    },
                    "type": "foo",
                    "updatedAt": "foo",
                  },
                },
                "sys": Object {
                  "createdAt": "foo",
                  "environment": Object {
                    "foo": Object {},
                  },
                  "id": "foo",
                  "locale": "foo",
                  "revision": 0,
                  "space": Object {
                    "sys": Object {
                      "id": "foo",
                      "linkType": "foo",
                      "type": "foo",
                    },
                  },
                  "type": "foo",
                  "updatedAt": "foo",
                },
              },
              "isReverseArrangement": false,
              "text": "foo",
              "title": "foo",
            },
          }
    }
    z={0}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="flex justify-center"
>
        <div
                className="col-12 md-col-6 flex justify-center"
        >
                <div
                        className="transition-slide-up py4 px2 col-10 md-col-8 center"
                >
                        <p
                                className="block-headline pb3"
                        >
                                foo
                        </p>
                        <div
                                className="block-subheadline"
                        >
                                foo
                        </div>
                        <Image
                                alt="foo image"
                                bg={false}
                                className="w100"
                                onImgLoad={[Function]}
                                src="?w=1400&fm=png&q=90"
                                style={Object {}}
                        />
                        <div>
                                <Button
                                        className="inline-flex mt3"
                                        color="madison-blue"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label="foo"
                                        onClick={[Function]}
                                        shadow={false}
                                        to="/foo"
                                        type="button"
                                        variant="primary"
                                />
                        </div>
                </div>
        </div>
</div>,
      "className": "pb4 pb2 z-sub-nav",
      "style": Object {
        "zIndex": 0,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="col-12 md-col-6 flex justify-center"
>
            <div
                        className="transition-slide-up py4 px2 col-10 md-col-8 center"
            >
                        <p
                                    className="block-headline pb3"
                        >
                                    foo
                        </p>
                        <div
                                    className="block-subheadline"
                        >
                                    foo
                        </div>
                        <Image
                                    alt="foo image"
                                    bg={false}
                                    className="w100"
                                    onImgLoad={[Function]}
                                    src="?w=1400&fm=png&q=90"
                                    style={Object {}}
                        />
                        <div>
                                    <Button
                                                className="inline-flex mt3"
                                                color="madison-blue"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label="foo"
                                                onClick={[Function]}
                                                shadow={false}
                                                to="/foo"
                                                type="button"
                                                variant="primary"
                                    />
                        </div>
            </div>
</div>,
          null,
        ],
        "className": "flex justify-center",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="transition-slide-up py4 px2 col-10 md-col-8 center"
>
              <p
                            className="block-headline pb3"
              >
                            foo
              </p>
              <div
                            className="block-subheadline"
              >
                            foo
              </div>
              <Image
                            alt="foo image"
                            bg={false}
                            className="w100"
                            onImgLoad={[Function]}
                            src="?w=1400&fm=png&q=90"
                            style={Object {}}
              />
              <div>
                            <Button
                                          className="inline-flex mt3"
                                          color="madison-blue"
                                          disabled={false}
                                          fullWidth={false}
                                          hover="shadow"
                                          label="foo"
                                          onClick={[Function]}
                                          shadow={false}
                                          to="/foo"
                                          type="button"
                                          variant="primary"
                            />
              </div>
</div>,
            "className": "col-12 md-col-6 flex justify-center",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p
                  className="block-headline pb3"
>
                  foo
</p>,
                <div
                  className="block-subheadline"
>
                  foo
</div>,
                <Image
                  alt="foo image"
                  bg={false}
                  className="w100"
                  onImgLoad={[Function]}
                  src="?w=1400&fm=png&q=90"
                  style={Object {}}
/>,
                <div>
                  <Button
                                    className="inline-flex mt3"
                                    color="madison-blue"
                                    disabled={false}
                                    fullWidth={false}
                                    hover="shadow"
                                    label="foo"
                                    onClick={[Function]}
                                    shadow={false}
                                    to="/foo"
                                    type="button"
                                    variant="primary"
                  />
</div>,
              ],
              "className": "transition-slide-up py4 px2 col-10 md-col-8 center",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "foo",
                  "className": "block-headline pb3",
                },
                "ref": null,
                "rendered": "foo",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "foo",
                  "className": "block-subheadline",
                },
                "ref": null,
                "rendered": "foo",
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "alt": "foo image",
                  "bg": false,
                  "children": null,
                  "className": "w100",
                  "onImgLoad": [Function],
                  "src": "?w=1400&fm=png&q=90",
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Button
                    className="inline-flex mt3"
                    color="madison-blue"
                    disabled={false}
                    fullWidth={false}
                    hover="shadow"
                    label="foo"
                    onClick={[Function]}
                    shadow={false}
                    to="/foo"
                    type="button"
                    variant="primary"
/>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": null,
                    "className": "inline-flex mt3",
                    "color": "madison-blue",
                    "disabled": false,
                    "fullWidth": false,
                    "hover": "shadow",
                    "label": "foo",
                    "onClick": [Function],
                    "shadow": false,
                    "to": "/foo",
                    "type": "button",
                    "variant": "primary",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="flex justify-center"
>
          <div
                    className="col-12 md-col-6 flex justify-center"
          >
                    <div
                              className="transition-slide-up py4 px2 col-10 md-col-8 center"
                    >
                              <p
                                        className="block-headline pb3"
                              >
                                        foo
                              </p>
                              <div
                                        className="block-subheadline"
                              >
                                        foo
                              </div>
                              <Image
                                        alt="foo image"
                                        bg={false}
                                        className="w100"
                                        onImgLoad={[Function]}
                                        src="?w=1400&fm=png&q=90"
                                        style={Object {}}
                              />
                              <div>
                                        <Button
                                                  className="inline-flex mt3"
                                                  color="madison-blue"
                                                  disabled={false}
                                                  fullWidth={false}
                                                  hover="shadow"
                                                  label="foo"
                                                  onClick={[Function]}
                                                  shadow={false}
                                                  to="/foo"
                                                  type="button"
                                                  variant="primary"
                                        />
                              </div>
                    </div>
          </div>
</div>,
        "className": "pb4 pb2 z-sub-nav",
        "style": Object {
          "zIndex": 0,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-12 md-col-6 flex justify-center"
>
              <div
                            className="transition-slide-up py4 px2 col-10 md-col-8 center"
              >
                            <p
                                          className="block-headline pb3"
                            >
                                          foo
                            </p>
                            <div
                                          className="block-subheadline"
                            >
                                          foo
                            </div>
                            <Image
                                          alt="foo image"
                                          bg={false}
                                          className="w100"
                                          onImgLoad={[Function]}
                                          src="?w=1400&fm=png&q=90"
                                          style={Object {}}
                            />
                            <div>
                                          <Button
                                                        className="inline-flex mt3"
                                                        color="madison-blue"
                                                        disabled={false}
                                                        fullWidth={false}
                                                        hover="shadow"
                                                        label="foo"
                                                        onClick={[Function]}
                                                        shadow={false}
                                                        to="/foo"
                                                        type="button"
                                                        variant="primary"
                                          />
                            </div>
              </div>
</div>,
            null,
          ],
          "className": "flex justify-center",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="transition-slide-up py4 px2 col-10 md-col-8 center"
>
                <p
                                className="block-headline pb3"
                >
                                foo
                </p>
                <div
                                className="block-subheadline"
                >
                                foo
                </div>
                <Image
                                alt="foo image"
                                bg={false}
                                className="w100"
                                onImgLoad={[Function]}
                                src="?w=1400&fm=png&q=90"
                                style={Object {}}
                />
                <div>
                                <Button
                                                className="inline-flex mt3"
                                                color="madison-blue"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label="foo"
                                                onClick={[Function]}
                                                shadow={false}
                                                to="/foo"
                                                type="button"
                                                variant="primary"
                                />
                </div>
</div>,
              "className": "col-12 md-col-6 flex justify-center",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <p
                    className="block-headline pb3"
>
                    foo
</p>,
                  <div
                    className="block-subheadline"
>
                    foo
</div>,
                  <Image
                    alt="foo image"
                    bg={false}
                    className="w100"
                    onImgLoad={[Function]}
                    src="?w=1400&fm=png&q=90"
                    style={Object {}}
/>,
                  <div>
                    <Button
                                        className="inline-flex mt3"
                                        color="madison-blue"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label="foo"
                                        onClick={[Function]}
                                        shadow={false}
                                        to="/foo"
                                        type="button"
                                        variant="primary"
                    />
</div>,
                ],
                "className": "transition-slide-up py4 px2 col-10 md-col-8 center",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "foo",
                    "className": "block-headline pb3",
                  },
                  "ref": null,
                  "rendered": "foo",
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "foo",
                    "className": "block-subheadline",
                  },
                  "ref": null,
                  "rendered": "foo",
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "alt": "foo image",
                    "bg": false,
                    "children": null,
                    "className": "w100",
                    "onImgLoad": [Function],
                    "src": "?w=1400&fm=png&q=90",
                    "style": Object {},
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <Button
                      className="inline-flex mt3"
                      color="madison-blue"
                      disabled={false}
                      fullWidth={false}
                      hover="shadow"
                      label="foo"
                      onClick={[Function]}
                      shadow={false}
                      to="/foo"
                      type="button"
                      variant="primary"
/>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": null,
                      "className": "inline-flex mt3",
                      "color": "madison-blue",
                      "disabled": false,
                      "fullWidth": false,
                      "hover": "shadow",
                      "label": "foo",
                      "onClick": [Function],
                      "shadow": false,
                      "to": "/foo",
                      "type": "button",
                      "variant": "primary",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "div",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          null,
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GenericHero
    block={
        Object {
            "fields": [Function],
          }
    }
    z={1}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="flex justify-center"
>
        <div
                className="col-12 md-col-6 flex justify-center"
        >
                <div
                        className="transition-slide-up py4 px2 col-10 md-col-8 center"
                >
                        <p
                                className="block-headline pb3"
                        />
                </div>
        </div>
</div>,
      "className": "pb4 pb2 z-sub-nav",
      "style": Object {
        "zIndex": 1,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="col-12 md-col-6 flex justify-center"
>
            <div
                        className="transition-slide-up py4 px2 col-10 md-col-8 center"
            >
                        <p
                                    className="block-headline pb3"
                        />
            </div>
</div>,
          null,
        ],
        "className": "flex justify-center",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="transition-slide-up py4 px2 col-10 md-col-8 center"
>
              <p
                            className="block-headline pb3"
              />
</div>,
            "className": "col-12 md-col-6 flex justify-center",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p
                  className="block-headline pb3"
/>,
                null,
                null,
                null,
              ],
              "className": "transition-slide-up py4 px2 col-10 md-col-8 center",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "",
                  "className": "block-headline pb3",
                },
                "ref": null,
                "rendered": "",
                "type": "p",
              },
              null,
              null,
              null,
            ],
            "type": "div",
          },
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="flex justify-center"
>
          <div
                    className="col-12 md-col-6 flex justify-center"
          >
                    <div
                              className="transition-slide-up py4 px2 col-10 md-col-8 center"
                    >
                              <p
                                        className="block-headline pb3"
                              />
                    </div>
          </div>
</div>,
        "className": "pb4 pb2 z-sub-nav",
        "style": Object {
          "zIndex": 1,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-12 md-col-6 flex justify-center"
>
              <div
                            className="transition-slide-up py4 px2 col-10 md-col-8 center"
              >
                            <p
                                          className="block-headline pb3"
                            />
              </div>
</div>,
            null,
          ],
          "className": "flex justify-center",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="transition-slide-up py4 px2 col-10 md-col-8 center"
>
                <p
                                className="block-headline pb3"
                />
</div>,
              "className": "col-12 md-col-6 flex justify-center",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <p
                    className="block-headline pb3"
/>,
                  null,
                  null,
                  null,
                ],
                "className": "transition-slide-up py4 px2 col-10 md-col-8 center",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "",
                    "className": "block-headline pb3",
                  },
                  "ref": null,
                  "rendered": "",
                  "type": "p",
                },
                null,
                null,
                null,
              ],
              "type": "div",
            },
            "type": "div",
          },
          null,
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
